--- a/t.tex
+++ b/t.tex
@@ -22,8 +22,6 @@
 
 \input{defs.tex}
 
-
-
 \usepackage{xcolor}
 %\usepackage[notref,notcite]{showkeys}
 % \usepackage[color]{showkeys}
@@ -39,7 +37,7 @@
 
 \chapter{Introduction}
 \input{intro.tex}
-%
+
 \chapter{Theory}
 \input{theory.tex}
 
@@ -50,7 +48,7 @@
 \input{expe.tex}
 
 \chapter{Results}
-% \input{result.tex}
+\input{result.tex}
 
 \chapter{Conclusion}
 % \input{conclusion.tex}
