--- a/fdphd.bib
+++ b/fdphd.bib
@@ -632,8 +632,20 @@ j%% TODO understand what this is about
   pages={1--16},
   year={2003}
 }
-
-
+@article{moroz2002metallo,
+  title = {Metallo-dielectric diamond and zinc-blende photonic crystals},
+  author = {Moroz, Alexander},
+  journal = {Phys. Rev. B},
+  volume = {66},
+  issue = {11},
+  pages = {115109},
+  numpages = {15},
+  year = {2002},
+  month = {Sep},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevB.66.115109},
+  url = {http://link.aps.org/doi/10.1103/PhysRevB.66.115109}
+}
 @article{zengerle1987light,
   title={Light propagation in singly and doubly periodic planar waveguides},
   author={Zengerle, R},
