--- a/fdphd.bib
+++ b/fdphd.bib
@@ -2123,3 +2123,13 @@ lts.fzu.cz/pdf/d-js.pdf
   year={2013},
   publisher={IOP Publishing}
 }
+@article{nemec2005highly,
+  title={Highly tunable photonic crystal filter for the terahertz range},
+  author={Nemec, H and Kuzel, P and Duvillaret, L and Pashkin, A and Dressel, M and Sebastian, MT},
+  journal={Optics letters},
+  volume={30},
+  number={5},
+  pages={549--551},
+  year={2005},
+  publisher={Optical Society of America}
+}
