added about flat lens

--- a/fdphd.bib
+++ b/fdphd.bib
@@ -2133,3 +2133,11 @@ lts.fzu.cz/pdf/d-js.pdf
   year={2005},
   publisher={Optical Society of America}
 }
+@article{silin1978possibility,
+  title={Possibility of creating plane-parallel lenses},
+  author={Silin, RA},
+  journal={Optics and Spectroscopy},
+  volume={44},
+  pages={109--110},
+  year={1978}
+}
