--- a/theory.tex
+++ b/theory.tex
@@ -1088,6 +1088,13 @@ Theoretical investigation on electrodynamics of media posessing negative index o
 
 Note that the referenced theoretical papers all used the electrodynamics of \textit{homogeneous} media, without assuming microscopic periodicity nor any other technical way how such a medium should be obtained. 
 
+\add{
+Conceptual design of a plane-parallel lens: Silin in 1978 \cite{silin1978possibility}
+\textit{Superlensing -- amplification of evanescent waves}
+
+\todo{note:silver lens}
+}
+
 %}}}
 \subsection{Artificial dielectrics and metamaterials} %{{{
 Third independent paradigm was based on arranging sub-wavelength particles into an optically dense lattice to obtain some desired macroscopic behaviour of the light. 
@@ -1110,20 +1117,21 @@ In the approximation of local media, the \textit{effective permittivity} $\eeff(
 The effective refractive index $\Neff(\omega)$ in all such cases was also lower than that of vacuum \cite{brown1953artificial}, but, following Eq. (\ref{eq_dispeqN}), it could not become negative, since the effective permeability $\meff(\omega) > 0$ was still positive. The unit cell size was kept much smaller than the wavelength, so the problem of \textit{homogenization} appeared as settled and the nonlocal effects apparently did not cause much concerns.
 
 
-\mdf{PK-"The word “metamaterial” (MM) appeared first in the paper by Smith et al. in 2000 [6] where a structured material" -- is it true? 
+\add{PK-"The word “metamaterial” (MM) appeared first in the paper by Smith et al. in 2000 [6] where a structured material" -- is it true? 
 Although somewhat redundant to \textit{artificial dielectrics}, it can be viewed as more fortunate as 
 It gained on significant popularity around the millenium break, probably in connection with the Pendry's paper \cite{pendry1999magnetism} which outlined how a negative index of refraction can be obtained in a periodic medium, when metallic wires introducing $\eeff<0$ are interlaced with small loops, known as split-ring resonators (SRR), that introduce $\meff<0$.
+}
 
 
 
 \mdf{
-\textit{Superlensing -- amplification of evanescent waves}
+
+\textit{Superlensing with metamaterials}
  and sub-diffraction imaging
 %% add about microscope limitation by num-aperture 
 To achieve the desired high resolution
 for imaging beyond the diffraction limit , the medium has to maintain  \todo{+}
 %% http://www.wave-scattering.com/negative.html
-%% The use of negative refractive medium as a plane-parallel lens (though not yet perfect) has been investigated by R.A. Silin in his article "Possibility of creating plane-parallel lenses", Opt. Spektrosk. 44, 189-191 (1978)
 
 %Comment  on Negative Refraction  Makes a  Perfect  Lens
 \begin{enumerate}
@@ -1132,6 +1140,8 @@ for imaging beyond the diffraction limit , the medium has to maintain  \todo{+}
 \item{Break-down must be prevented}
 \item{}
 \end{enumerate}
+% -> superlens (aside from losses and aberration, in a hypothetical case that the MM structure can be made much finer than a detector ...)
+% Losses are in \cite[p. 708]{born1999book}
 
 % If a metamaterial is used as the medium, this obviously translates into the unit cells being \textit{finer} than the finest details to be imaged. The requirement is in fact much stricter, as also the spatial dispersion has to be negligible for all waves needed for the desired resolution.  which could be achieved either with sophisticated engineering of the dispersion, or with massive reduction of the unit cell size, so that all wave vectors are near the center of Brillouin zone. % refer to some Fig. of the PHC BZ
 % Aside from spatial dispersion, a great challenge are the dissipative losses. If the wave components with high spatial frequency are to be resolved, they also may not be significantly damped. This is essential for the evanescent-wave amplification, where small energy flow-through and simultaneous high energy concentration require extremely low losses. In contrast, down-scaling the unit cells inherently requires higher energy localisation, and this is usually at the expense of the losses growing.
@@ -1152,9 +1162,9 @@ To achieve the desired high resolution, the medium has to maintain  \todo{+}
 
 
 \mdf{
-% the 2000s have brought also the \textit{near-zero} effective parameter structures into the limelight, which are also unusual in nature
-% add some notable papers; quotes may be in: Epsilon-Mu Zero Meta-material with Zero Refractive Index An Electromagnetic Nihility, Shantanu Das
-j
+the 2000s have brought also the \textit{near-zero} effective parameter structures into the limelight, which are also unusual in nature
+add some notable papers; quotes may be in: Epsilon-Mu Zero Meta-material with Zero Refractive Index An Electromagnetic Nihility, Shantanu Das
+}
 
 
 
@@ -1185,22 +1195,6 @@ PhCs with metallic/metamaterial inclusions, [Monsoriu, Lina Shi and friends]
 
 the unification of mm and phc become apparently a more important topic when the practical realizations of the structures were tested
 \cite{yannopapas2005negative}
-
-
-%}}}
-
-% ================================================================================
-
-
-% --------------------------------------------------------------------------------
-
-
-
-
-
-% -> superlens (aside from losses and aberration, in a hypothetical case that the MM structure can be made much finer than a detector ...)
-% Losses are in \cite[p. 708]{born1999book}
-%}}}
 
 
 %}}}
