--- a/theory.tex
+++ b/theory.tex
@@ -1089,9 +1089,8 @@ Theoretical investigation on electrodynamics of media posessing negative index o
 Note that the referenced theoretical papers all used the electrodynamics of \textit{homogeneous} media, without assuming microscopic periodicity nor any other technical way how such a medium should be obtained. 
 
 \add{
-Conceptual design of a plane-parallel lens: Silin in 1978 \cite{silin1978possibility}
-\textit{Superlensing -- amplification of evanescent waves}
-
+\textit{Flat negative-index lens}
+Conceptual design of a plane-parallel lens: Silin in 1978 \cite{silin1978possibility} %% TODO does not discuss amplification of evanescent waves?
 \todo{note:silver lens}
 }
 
