--- a/t.tex
+++ b/t.tex
@@ -15,8 +15,8 @@
 
 
 %% DEBUGGING ONLY, comment out in production version:
-\setcounter{tocdepth}{4} 
-\setcounter{secnumdepth}{4} 
+%\setcounter{tocdepth}{4} 
+%\setcounter{secnumdepth}{4} 
 
 \addbibresource{fdphd.bib}
 
