various small changes of Tuesday

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -12,16 +12,16 @@
 %     --> 
 
 
-% TODO Where appropriate, we also investigated how this behaviour depends on some external parameter (such as electric field, temperature or illumination) -- in other words, how the \textit{tunability} of the structure can be achieved.
-% TODO is this true? Uncomment or remove! ...   Attention  was also paid also to investigate the tunability of their properties depending on external parameters, such as temperature, electric and magnetic fields and illumination. %, i.e. to 
 
-
-%% NOTES: What was not discussed in the thesis
-%% quasicrystals, chiral media and gyrotropy, structures with nonlinearity or loss,    tunable structures
 
 %%% TODO TODO TODO TODO TODO TODO 
 %%% Hole : Conclusion - what to put here?
-%%% TODO TODO TODO TODO TODO TODO 
+%% NOTES: What was not discussed in the thesis
+%% quasicrystals, chiral media and gyrotropy, structures with nonlinearity or loss,    tunable structures
+%% * unification of mm and phc concepts
+%% * mention tunability?       Where appropriate, we also investigated how this behaviour depends on some external parameter (such as electric field, temperature or illumination) -- in other words, how the \textit{tunability} of the structure can be achieved. ...   Attention  was also paid also to investigate the tunability of their properties depending on external parameters, such as temperature, electric and magnetic fields and illumination. %, i.e. to 
+
+
 
 Things that could be pursued further on the basis of the presented work:
 observe bianisotropy of the metamaterial particles
