--- a/fdphd.bib
+++ b/fdphd.bib
@@ -635,6 +635,12 @@ j%% TODO understand what this is about
 
 % % == Photonic crystals ==
 % /*{{{*/
+@book{joannopoulos2011photonic,
+  title={Photonic crystals: molding the flow of light},
+  author={Joannopoulos, John D and Johnson, Steven G and Winn, Joshua N and Meade, Robert D},
+  year={2011},
+  publisher={Princeton university press}
+}
 @article{yeh1977electromagnetic,
   title={Electromagnetic propagation in periodic stratified media. I. General theory},
   author={Yeh, Pochi and Yariv, Amnon and Hong, Chi-Shain},
@@ -748,6 +754,18 @@ j%% TODO understand what this is about
   year={1968},
   publisher={Turpion Ltd}
 }
+@article{boardman2005negative,
+  title={Negative refraction in perspective},
+  author={Boardman, Allan D and King, Neil and Velasco, Larry},
+  journal={Electromagnetics},
+  volume={25},
+  number={5},
+  pages={365--389},
+  year={2005},
+  publisher={Taylor \& Francis}
+}
+
+
 @article{oganisian2014observation,
   title={Observation of negative refraction in the graphene/ferrite composite},
   author={Oganisian, Karen and Strek, Wieslaw},
